Fixing input field covering the last message

--- a/client/src/app/components/members/member-messages/member-messages.component.scss
+++ b/client/src/app/components/members/member-messages/member-messages.component.scss
@@ -71,7 +71,7 @@ main {
   }
 
   .create {
-    position: fixed;
+    position: sticky;
     bottom: 0;
     left: 0;
     width: 100%;
